[gd_scene load_steps=3 format=3 uid="uid://bplkxlcbflcxq"]

[ext_resource type="Script" path="res://Scripts/Options.gd" id="1_3ugx7"]
[ext_resource type="AudioStream" uid="uid://jagbm5tr2gwg" path="res://Assets/ocean-waves-250310.mp3" id="2_khhqr"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ugx7")
menu_scene_path = "res://Scenes/MainMenu.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(700, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -48.5
offset_right = 50.5
offset_bottom = 48.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="VolumeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Volume: 0 db
"

[node name="VolumeSlider" type="HSlider" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_khhqr")
volume_db = 10.0
autoplay = true
